# gen_ai_demo

./: .gitignore  README.md
agentic_vacation_backend_01.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: .gitignore  main.py  pyproject.toml
backend/agents/: activity_agent.py  base_agent.py  budget_agent.py  critic_agent.py  flight_agent.py  lodging_agent.py  planner_agent.py
backend/config/: settings.py
backend/llm/: agent_tools.py  agents_graph.py  openai_client.py  orchestrator_input.py
backend/orchestrator/: controller.py  controllerllm.py
backend/routers/: trips.py
backend/schemas/: profile_schema.py  tool_schema.py  trip_schema.py
backend/scripts/: check _amedeus_offers.py  check_amadeus_flights.py  check_amadeus_offers.py  check_amedeus_auth.py  check_amedeus_hotels.py
backend/tests/: test_activities_agent.py  test_api_plan_endpoint.py  test_flights_api.py  test_orchestrator.py
backend/tools/: events_api.py  flights_api.py  hotels_api.py
backend/utils/: logger.py  state_normalizer.py  utils.py
docs/prompt-templates/: activity_agent.md  budget_agent.md  critic_agent.md  intake_prompt.md  lodging_agent.md  orchestrator_system.md  planner_agent.md  tool_use_guidelines.md  transport_agent.md
docs/prompts/: activities.md  budget.md  critics.md  flights.md  lodging.md  orchestrator.md  planner.md
